--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,10 @@ authors = [
   { name = "Daniil Bobrovskiy" },
   { name = "Guillaume Huguet" },
 ]
-requires-python = ">=3.11"
+requires-python = ">=3.10"
 classifiers = [
   "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
@@ -62,7 +63,7 @@ optional-dependencies.docs = [
   "ipython",
   "myst-nb>=1.1",
   "pandas",
-  "scvi-tools>=1.3.1",
+  "scvi-tools",
   "setuptools",               # Until pybtex >0.23.0 releases: https://bitbucket.org/pybtex-devs/pybtex/issues/169/
   "sphinx>=8",
   "sphinx-autodoc-typehints",
@@ -77,7 +78,7 @@ optional-dependencies.embedding = [
   "transformers",
 ]
 optional-dependencies.external = [
-  "scvi-tools>=1.3.1",
+  "scvi-tools",
 ]
 optional-dependencies.pp = [
   "pertpy",
@@ -187,7 +188,7 @@ sort = "Miss"
 legacy_tox_ini = """
 [tox]
 min_version = 4.0
-env_list = lint-code,py{3.11,3.12,3.13}
+env_list = lint-code,py{3.10,3.11,3.12,3.13}
 skip_missing_interpreters = true
 
 [testenv]
@@ -279,7 +280,7 @@ commands = biber --tool --output_file={tox_root}{/}docs{/}references.bib --nolog
 
 [tool.mypy]
 mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
-python_version = "3.11"
+python_version = "3.10"
 plugins = "numpy.typing.mypy_plugin"
 
 ignore_errors = false
