--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,7 +81,7 @@ optional-dependencies.external = [
   "scvi-tools>=1.3.1",
 ]
 optional-dependencies.pp = [
-  "pertpy==0.11.2",
+  "pertpy",
   "pynndescent",
   "rdkit",
 ]
